[gd_scene load_steps=40 format=2]

[ext_resource path="res://Sprites/SpriteSheets/OuterRingYellowToPurple.png" type="Texture" id=1]
[ext_resource path="res://paddle1.gd" type="Script" id=2]
[ext_resource path="res://Sprites/SpriteSheets/Platform_Y.png" type="Texture" id=3]
[ext_resource path="res://ball.gd" type="Script" id=4]
[ext_resource path="res://paddle2.gd" type="Script" id=5]
[ext_resource path="res://Sprites/SpriteSheets/Dope_Yellow_Paddle.png" type="Texture" id=6]
[ext_resource path="res://Sprites/SpriteSheets/Ball_withFadeIn.png" type="Texture" id=7]
[ext_resource path="res://gameManager.gd" type="Script" id=8]
[ext_resource path="res://joystix/JOYSTIX.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=10]
[ext_resource path="res://p1Score.gd" type="Script" id=11]
[ext_resource path="res://Sprites/SpriteSheets/Dope_Purple_Paddle.png" type="Texture" id=13]
[ext_resource path="res://RingChange.gd" type="Script" id=15]
[ext_resource path="res://MiddleStar.gd" type="Script" id=16]
[ext_resource path="res://Sprites/SpriteSheets/Star_sheet.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Button.png" type="Texture" id=18]
[ext_resource path="res://Sounds/paddlehit.wav" type="AudioStream" id=19]
[ext_resource path="res://Sounds/starexplosion.wav" type="AudioStream" id=20]
[ext_resource path="res://Sounds/scoring.wav" type="AudioStream" id=21]
[ext_resource path="res://Sounds/wormhole.wav" type="AudioStream" id=22]
[ext_resource path="res://Sounds/speed.wav" type="AudioStream" id=23]
[ext_resource path="res://OuterColliderScript.gd" type="Script" id=24]
[ext_resource path="res://icon.png" type="Texture" id=25]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 0.49
step = 0.7

[sub_resource type="Animation" id=3]
length = 0.49
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 51.8266, 20.1426 )

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 10.8365

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 0 ]
}

[sub_resource type="Animation" id=10]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 12, 11, 10 ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="DynamicFont" id=12]
size = 35
font_data = ExtResource( 9 )

[sub_resource type="CircleShape2D" id=13]
radius = 22.3014

[sub_resource type="Animation" id=14]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=15]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22 ]
}

[sub_resource type="CircleShape2D" id=16]

[node name="Node2D" type="Node2D"]
script = ExtResource( 24 )

[node name="Background" parent="." instance=ExtResource( 10 )]
position = Vector2( 0.149872, 2.76492 )

[node name="Score" type="Sprite" parent="."]
visible = false
position = Vector2( 0.950012, -157.563 )
texture = ExtResource( 18 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0.583742, 2.97754 )
current = true

[node name="OuterRing" type="StaticBody2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OuterRing"]
material = SubResource( 1 )
position = Vector2( -43.7188, 148 )
scale = Vector2( 88.7414, 75.6079 )
build_mode = 1
polygon = PoolVector2Array( 0.0649289, -8.34757, 0.815331, -8.37274, 1.17713, -8.33499, 1.45585, -8.29095, 1.73993, -8.2249, 2.08537, -8.11411, 2.52593, -7.9202, 2.97144, -7.69578, 3.46267, -7.36696, 3.8568, -7.05838, 4.21476, -6.70288, 4.56354, -6.29351, 4.83044, -5.91585, 5.18338, -5.29697, 5.39878, -4.84996, 5.61801, -4.2669, 5.83016, -3.50337, 5.9403, -2.74928, 5.98058, -2.17071, 5.96784, -1.42423, 5.83016, -0.42236, 5.61906, 0.374824, 5.35288, 1.04274, 5.1525, 1.47006, 4.84365, 1.97966, 4.48108, 2.484, 4.01557, 2.98835, 3.5172, 3.41274, 2.93683, 3.80792, 2.39074, 4.07585, 1.86704, 4.26498, 1.33886, 4.39107, 0.77029, 4.45937, 0.367441, 4.45412, -0.0175037, 4.44886, -0.695691, 4.31765, -1.31982, 4.11297, -1.85965, 3.83944, -2.45945, 3.45067, -2.92497, 3.0619, -3.42181, 2.52603, -3.83361, 1.95864, -4.12456, 1.45955, -4.41551, 0.844875, -4.62141, 0.261723, -4.83516, -0.486997, -4.93474, -1.34063, -4.96365, -2.23218, -4.8855, -3.04281, -4.70198, -3.9044, -4.42894, -4.72397, -4.02609, -5.55404, -3.55162, -6.27379, -3.00106, -6.91473, -2.37888, -7.41908, -1.83279, -7.78158, -1.20166, -8.07053, -0.677331, -8.24338, -0.286152, -8.30982, 0.0274088, -8.34757, 0.257409, -8.48274, 0.443527, -8.6068, 0.632049, -8.8701, -0.743512, -8.71216, -1.42382, -8.44015, -1.9247, -8.1155, -2.33588, -7.95756, -2.74705, -7.72065, -3.14327, -7.29947, -3.54697, -6.91339, -3.92824, -6.45712, -4.18989, -6.08859, -4.47398, -5.69374, -4.85525, -4.86017, -5.04214, -4.2986, -5.24399, -3.59664, -5.40099, -2.49106, -5.31875, -1.2714, -5.24399, -0.560666, -5.12295, 0.231533, -4.94465, 0.789598, -4.67912, 1.37669, -4.44966, 1.72142, -4.20184, 2.14156, -3.86224, 2.62633, -3.32071, 3.22961, -3.1555, 3.42352, -2.41205, 4.03756, -1.9256, 4.34997, -1.08734, 4.70052, -0.526974, 4.87061, 0.352887, 4.9139, 1.373, 4.83036, 2.25077, 4.69114, 2.9862, 4.38485, 3.95887, 3.86973, 4.5994, 3.20146, 5.10263, 2.58938, 5.60351, 1.83477, 6.01469, 0.97487, 6.28382, -0.271107, 6.44829, -1.31527, 6.42586, -2.42086, 6.17702, -3.6622, 5.96983, -4.69345, 5.46895, -5.73761, 4.90825, -6.55364, 4.2728, -7.2556, 3.82425, -7.67677, 3.15142, -8.02775, 2.82248, -8.22956, 2.19451, -8.44015, 1.67867, -8.68583, 1.22264, -8.74726, 0.654477, -8.77358, 0.413657, -8.56634 )

[node name="OuterRing_P" type="Sprite" parent="OuterRing/CollisionPolygon2D"]
position = Vector2( 0.511478, -1.96511 )
scale = Vector2( 0.0112687, 0.0132261 )
texture = ExtResource( 1 )
hframes = 7
frame = 6
script = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="OuterRing/CollisionPolygon2D/OuterRing_P"]
"anims/New Anim" = SubResource( 2 )
anims/changeColor = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="OuterRing/CollisionPolygon2D/OuterRing_P"]
stream = ExtResource( 21 )

[node name="Paddle1" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle1"]
material = SubResource( 4 )
position = Vector2( 0, 500 )
shape = SubResource( 5 )

[node name="paddleSpriteP" type="Sprite" parent="Paddle1/CollisionShape2D"]
texture = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Paddle1/CollisionShape2D/paddleSpriteP"]
autoplay = "paddle"
method_call_mode = 1
anims/paddle = SubResource( 6 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Paddle1/CollisionShape2D/paddleSpriteP"]
stream = ExtResource( 19 )
volume_db = -2.0

[node name="Paddle2" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle2"]
material = SubResource( 4 )
position = Vector2( 0, -500 )
shape = SubResource( 5 )

[node name="paddleSpriteY" type="Sprite" parent="Paddle2/CollisionShape2D"]
rotation = 3.14159
texture = ExtResource( 6 )
normal_map = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Paddle2/CollisionShape2D/paddleSpriteY"]
autoplay = "yellow paddle"
method_call_mode = 1
"anims/yellow paddle" = SubResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Paddle2/CollisionShape2D/paddleSpriteY"]
position = Vector2( 0.00243377, -960 )
rotation = -3.14159
stream = ExtResource( 19 )
volume_db = -2.0

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 0, 50 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2( 0.513336, 0 )
shape = SubResource( 8 )

[node name="ballSprite" type="Sprite" parent="Ball/CollisionShape2D"]
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
hframes = 14

[node name="Wormhole sounds" type="AudioStreamPlayer2D" parent="Ball/CollisionShape2D/ballSprite"]
scale = Vector2( 0.5, 0.5 )
stream = ExtResource( 22 )

[node name="Speedracer" type="AudioStreamPlayer2D" parent="Ball/CollisionShape2D/ballSprite"]
scale = Vector2( 0.5, 0.5 )
stream = ExtResource( 23 )
volume_db = 5.843

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ball/CollisionShape2D/ballSprite"]
autoplay = "ballRotate"
anims/Enter = SubResource( 9 )
anims/Exit = SubResource( 10 )
anims/ballRotate = SubResource( 11 )

[node name="Node" type="Node" parent="."]

[node name="Score" type="Label" parent="Node"]
margin_left = -800.0
margin_top = -475.0
margin_right = -635.0
margin_bottom = -370.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle Star" type="KinematicBody2D" parent="."]
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle Star"]
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="Middle Star/CollisionShape2D"]
scale = Vector2( 3, 3 )
texture = ExtResource( 17 )
hframes = 23
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Middle Star/CollisionShape2D/Sprite"]
autoplay = "IdleSun"
anims/Exploding = SubResource( 14 )
anims/IdleSun = SubResource( 15 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Middle Star/CollisionShape2D/Sprite"]
position = Vector2( 4.44899, -0.171115 )
stream = ExtResource( 20 )
volume_db = -2.0

[node name="Meteor" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 950, -300 )
shape = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="Meteor"]
position = Vector2( 0, -0.463303 )
texture = ExtResource( 25 )
